--- a/docker/dashboard/Makefile
+++ b/docker/dashboard/Makefile
@@ -1,8 +1,8 @@
 fast:
-	tar --transform 's|^dashboard/||' -czvf apps.tgz dashboard/bourse.py dashboard/*/
+	tar --transform 's|^dashboard/||' -czvf apps.tgz dashboard/bourse.py dashboard/callback.py dashboard/data_loader.py dashboard/layout.py dashboard/*/
 	docker build -t my_dashboard .
 
 all: Dockerfile
-	tar --transform 's|^dashboard/||' -czvf apps.tgz dashboard/bourse.py dashboard/*/
+	tar --transform 's|^dashboard/||' -czvf apps.tgz dashboard/bourse.py dashboard/callback.py dashboard/data_loader.py dashboard/layout.py dashboard/*/
 	docker build --no-cache -t my_dashboard .
 
