added dashboard and nez requirements

--- a/docker/dashboard/requirements.txt
+++ b/docker/dashboard/requirements.txt
@@ -1,12 +1,12 @@
-psycopg2-binary
-sqlalchemy
-sqlalchemy-timescaledb
-numpy
-pandas
-plotly
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.30
+sqlalchemy-timescaledb==0.4.1
+numpy==1.26.4
+pandas==2.2.2
+plotly==5.22.0
 kaleido
-dash
-dash-bootstrap-components
-dash-ag-grid
-dash_daq
-gunicorn
+dash==2.17.0
+dash-bootstrap-components==1.6.0
+dash-ag-grid==31.2.0
+dash_daq==0.5.0
+gunicorn==22.0.0
